# Assignment0Roman

./: .gitignore  README.md  RomanNumerals.cabal
app/: Main.hs
src/: RomanNumbers.hs
test/: Spec.hs
